After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 735128 - Fix critical warnings when opening context menu
Fix critical warnings when opening context menu
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-08-20 21:59 UTC by Michael Catanzaro
Modified: 2014-08-25 14:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix critical warnings when opening context menu (2.26 KB, patch)
2014-08-20 21:59 UTC, Michael Catanzaro
accepted-commit_now Details | Review
Fix critical warnings when opening context menu (2.88 KB, patch)
2014-08-25 14:57 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2014-08-20 21:59:31 UTC
This patch fixes the critical warnings we get when opening the context menu.
Comment 1 Michael Catanzaro 2014-08-20 21:59:32 UTC
Created attachment 284015 [details] [review]
Fix critical warnings when opening context menu

Opening the context menu causes this critical to print for each menu
item:

Gtk-CRITICAL **: gtk_accel_label_set_accel_closure: assertion
'gtk_accel_group_from_accel_closure (accel_closure) != NULL' failed
Comment 2 Carlos Garcia Campos 2014-08-25 07:53:38 UTC
Review of attachment 284015 [details] [review]:

Thanks!

::: src/ephy-window.c
@@ +1208,3 @@
 	g_object_unref (action);
 
+	gtk_action_group_set_accel_group (action_group, gtk_ui_manager_get_accel_group (manager));

I guess we can call gtk_ui_manager_get_accel_group (manager) only once using a local variable.
Comment 3 Michael Catanzaro 2014-08-25 14:57:55 UTC
The following fix has been pushed:
fb1be7f Fix critical warnings when opening context menu
Comment 4 Michael Catanzaro 2014-08-25 14:57:58 UTC
Created attachment 284412 [details] [review]
Fix critical warnings when opening context menu

Opening the context menu causes this critical to print for each menu
item:

Gtk-CRITICAL **: gtk_accel_label_set_accel_closure: assertion
'gtk_accel_group_from_accel_closure (accel_closure) != NULL' failed