Fix critical warnings when opening context menu

Opening the context menu causes this critical to print for each menu
item:

Gtk-CRITICAL **: gtk_accel_label_set_accel_closure: assertion
'gtk_accel_group_from_accel_closure (accel_closure) != NULL' failed

https://bugzilla.gnome.org/show_bug.cgi?id=735128